fix Wrong position of Booster Bar in Newsfeed

--- a/scss/_list.scss
+++ b/scss/_list.scss
@@ -729,7 +729,8 @@
 
       .completion-fill-vertical {
         position: absolute;
-        right: 4px; top: -10px;
+        right: 4px; 
+        top: -30px;
       }
     }
 
